[package]
name = "absh"
version = "0.0.0"
authors = ["Stiopa Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
clap = { version = "4.1.4", features = ["derive", "color"] }
atty = "=0.2"
rand = "0.7.3"
dirs = "3.0.1"
once_cell = "1.17.0"
regex = "1.5.4"
wait4 = "=0.1.3"
